--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -148,9 +148,104 @@
     "Profile": "Profil",
     "Log Out": "Se déconnecter",
     "Medical Practitioner": "Médecin Praticien",
-    "+ Add Patient": "+ Ajouter un patient"
+    "+ Add Patient": "+ Ajouter un patient",
+    "Validate & Sign": "Valider & Signer",
+    "Please sign below to generate the official PDF report.":"Veuillez signer ci-dessous pour générer le rapport PDF officiel.",
+    "Sign here (Mouse or Finger)":"Signez ici (Souris ou Doigt)",
+    "Clear / Restart":"Effacer / Recommencer",
+    "📄 PDF Format (Recommended)":"📄 Format PDF (Recommandé)",
+    "🖼️ Image Format (JPG)":"🖼️ Format Image (JPG)",
+    "Validate & Download":"Valider & Télécharger",
+    "Please sign before downloading the report.": "Veuillez apposer votre signature avant de télécharger le rapport.",
+    "Generating...": "Génération en cours...",
+    "Report": "Rapport",
+    "Ophthalmology Practice": "Cabinet d'Ophtalmologie",
+    "Dr.": "Dr.",
     
+    "File": "Dossier",
+     "RetinaScan - AI-Assisted Screening": "RetinaScan - Dépistage Assisté par IA",
+    "Scan": "Scan",
+    "Home": "Accueil",
+    "The Solution": "La Solution",
+    "About": "À Propos",
+    "Contact": "Contact",
+    "My Dashboard": "Mon Tableau de Bord",
+    "Login": "Connexion",
+    "Doctor Registration": "Inscription Médecin",
+    "New Version 2.0 with AI": "Nouvelle Version 2.0 avec IA",
+    "AI at the service of": "L'IA au service de la",
+    "Visual Health": "Santé Visuelle",
+    "RetinaScan uses advanced": "RetinaScan utilise des modèles de",
+    "Deep Learning": "Deep Learning",
+    "models to assist": "avancés pour assister les",
+    "ophthalmologists in the early detection of": "ophtalmologistes dans la détection précoce de la",
+    "diabetic retinopathy": "rétinopathie diabétique",
+    "Access Analysis": "Accéder aux Analyses",
+    "Start Diagnosis": "Commencer le Diagnostic",
+    "How it works?": "Comment ça marche ?",
+    "State-of-the-art technology": "Une technologie de pointe",
+    "An optimized workflow for doctors, from scan to PDF report.": "Un workflow optimisé pour les médecins, du scan au rapport PDF.",
+    "Image Analysis": "Analyse d'Images",
+    "Upload a fundus image and get within seconds a classification of the disease stage (0 to 4) with a confidence score.": "Téléchargez un fond d'œil et obtenez en quelques secondes une classification du stade de la maladie (0 à 4) avec un score de confiance.",
+    "Medical Reports": "Rapports Médicaux",
+    "Automatically generate professional PDF reports, including diagnosis, analyzed image and your electronic signature.": "Générez automatiquement des rapports PDF professionnels, incluant le diagnostic, l'image analysée et votre signature électronique.",
+    "Secure Data": "Données Sécurisées",
+    "Each doctor has their own secure space. Patient records are isolated and protected from unauthorized access.": "Chaque médecin dispose de son propre espace sécurisé. Les dossiers patients sont isolés et protégés contre les accès non autorisés.",
+    "Pathology & Issues": "Pathologie & Enjeux",
+    "What is Diabetic Retinopathy?": "Qu'est-ce que la Rétinopathie Diabétique ?",
+    "The leading cause of preventable blindness worldwide, this diabetes complication affects the blood vessels in the retina.": "Première cause de cécité prévisible dans le monde, cette complication du diabète affecte les vaisseaux sanguins de la rétine.",
+    "Without early screening, lesions are irreversible.": "Sans dépistage précoce, les lésions sont irréversibles.",
+    "Healthy Retina": "Rétine Saine",
+    "Diseased Retina": "Rétine Malade",
+    "Advanced Retinopathy": "Rétinopathie Avancée",
+    "Visual simulation of retinal lesions (microaneurysms and hemorrhages).": "Simulation visuelle des lésions rétiniennes (microanévrismes et hémorragies).",
+    "Chronic Hyperglycemia": "Hyperglycémie Chronique",
+    "Excess sugar in the blood weakens the walls of the retinal capillaries, leading to loss of integrity.": "L'excès de sucre dans le sang fragilise la paroi des capillaires rétiniens, entraînant une perte d'étanchéité.",
+    "Hemorrhages & Exudates": "Hémorragies & Exsudats",
+    "Micro-bleeding and lipid deposits appear (the yellow and red spots detected by our AI).": "Des micro-saignements et des dépôts de lipides apparaissent (les taches jaunes et rouges détectées par notre IA).",
+    "Risk of Blindness": "Risque de Cécité",
+    "Without treatment, new fragile vessels form (proliferation), leading to retinal detachment.": "Sans traitement, de nouveaux vaisseaux fragiles se forment (prolifération), menant au décollement de la rétine.",
+    "The 5 Stages detected by RetinaScan": "Les 5 Stades détectés par RetinaScan",
+    "Stage 0": "Stade 0",
+    "Absent": "Absence",
+  "Normal retina, no visible signs.": "Rétine normale, aucun signe visible.",
+    "Stage 1": "Stade 1",
+    "Mild": "Légère",
+    "Presence of isolated microaneurysms.": "Présence de microanévrismes isolés.",
+    "Stage 2": "Stade 2",
+    "Moderate": "Modérée",
+    "More numerous hemorrhages.": "Hémorragies plus nombreuses.",
+    "Stage 3": "Stade 3",
+    "Severe": "Sévère",
+    "Multiple pre-proliferative signs.": "Signes pré-proliférants multiples.",
+    "Stage 4": "Stade 4",
+    "Proliferative": "Proliférante",
+    "Neovascularization, imminent risk.": "Néovaisseaux, risque imminent.",
+    "Diabetics worldwide": "Diabétiques dans le monde",
+    "in": "sur",
+    "Will develop retinopathy": "Développera une rétinopathie",
+    "Preventable if detected early": "Évitable si détecté tôt",
+    "Contact & Support": "Contact & Support",
+    "You are a healthcare institution or a practitioner and want to integrate RetinaScan? Our team is at your disposal.": "Vous êtes un établissement de santé ou un praticien et souhaitez intégrer RetinaScan ? Notre équipe est à votre disposition.",
     
-  
-  
+    "Address": "Adresse",
+    "Health Technology Hub, Casablanca": "Pôle Technologique Santé, Casablanca",
+    "Doctor / Clinic Name": "Nom du Médecin / Clinique",
+    "Dr. ...": "Dr. ...",
+    "Professional Email": "Email Professionnel",
+    "Message": "Message",
+    "Demo request...": "Demande de démo...",
+    "Send Request": "Envoyer la demande",
+    "Legal Notice": "Mentions légales",
+    "Health Data Privacy": "Confidentialité Données Santé",
+    "Support": "Support",
+    "All rights reserved.": "Tous droits réservés.",
+    "Retinal Imaging": "Imagerie Rétinienne",
+    
+    "Left Eye (OG)": "Œil Gauche (OG)",
+    "Diagnosis & Conclusion": "Diagnostic & Conclusion",
+    "Diagnosis": "Diagnostic",
+    "AI": "IA",
+    "Prescription": "Prescription",
+    "Document generated by RetinaScan - Electronically validated.": "Document généré par RetinaScan - Validé électroniquement."
   }
